Setup LWC to test SlackPublisher

--- a/force-app/main/default/classes/SendToSlackLWCController.cls
+++ b/force-app/main/default/classes/SendToSlackLWCController.cls
@@ -1,6 +1,7 @@
 public class SendToSlackLWCController {
     
-    public void sendMessageToSlack() {
+    @AuraEnabled
+    public static void sendMessageToSlack() {
 
         String slackUrlSettingName = 'Main';
         List<SlackWebhookUrl__mdt> slackWebhookUrl = [
@@ -16,7 +17,7 @@ public class SendToSlackLWCController {
             .setNotificationText('Failure to setup Account in Salesforce')
             .addTextBlock('A request to setup an Account in Salesforce has failed. The following is error and raw request of the failure.', true)
             .addDivider()
-            .addTextBlock('*Error Message - 400', true)
+            .addTextBlock('*Error Message - 400*', true)
             .addCodeBlock('Some Error Code Message')
             .post();
     }
