Added context sections, images, modifications for existing messages to be built up, and changed how urls are designated for sending the message

--- a/force-app/main/default/classes/SendToSlackLWCController.cls
+++ b/force-app/main/default/classes/SendToSlackLWCController.cls
@@ -12,13 +12,21 @@ public class SendToSlackLWCController {
 
         String url = slackWebhookUrl[0].Url__c;
 
-        SlackPublisher.start()
-            .setUrl(url)
-            .setNotificationText('Failure to setup Account in Salesforce')
-            .addTextBlock('A request to setup an Account in Salesforce has failed. The following is error and raw request of the failure.', true)
+        SlackPublisher.MessageBuilder slackMessage = SlackPublisher.start()
+            .setNotificationText('Snowforce is coming up! :snowflake:')
+            .addTextBlock('*Upcoming Event*')
             .addDivider()
-            .addTextBlock('*Error Message - 400*', true)
-            .addCodeBlock('Some Error Code Message')
-            .post();
+            .addTextBlockWithImage('*<https://www.snowforce.io|Snowforce>*\nTuesday, February 26th 8:00am-4:30pm\nUtah Cultural Celebration Center\n1355 West 3100 South, West Valley City, UT 84119', 
+                SlackPublisher.imageElement('https://api.slack.com/img/blocks/bkb_template_images/notifications.png', 'calendar'))
+            .addContext(new List<SlackPublisher.Element> { 
+                SlackPublisher.imageElement('https://api.slack.com/img/blocks/bkb_template_images/notificationsWarningIcon.png', 'warning'),
+                SlackPublisher.textElement('*Conflicting Appointment:* Team Sync 3:00-4:00')
+            })
+            .retrieve();
+
+        SlackPublisher.modify(slackMessage)
+            .addDivider()
+            .addTextBlock('Check the #general channel for more details on availability for <@U011M81G3AS>')
+            .post(url);
     }
 }
